# linkedin-cv

./: .dockerignore  .env.production.sample  .env.sample  .env_  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  Dockerfile  HTML_EXPORT_GUIDE.md  IMPROVEMENTS.md  OUTPUT_STRUCTURE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  RELEASE_SUMMARY.md  STATUS_SUMMARY.md  STYLING_IMPROVEMENTS.md  TEMPLATE_STRUCTURE.md  analyze_scraped_html.py  capture_linkedin_html.py  debug_experience.py  debug_parser.py  docker-compose.yml  export-and-generate.sh  generate_sample_cv.py  install.sh  profile_data.json  pyproject.toml  run.sh  test.sh  test_output_structure.py  uninstall.sh  update_parser_selectors.py
assets/: banner.txt
docs/: 1_ProfileHeaderExtraction.md  AUTHENTICATION_GUIDE.md  DEPLOYMENT.md  HTML_EXPORT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  NEW_WORKFLOW.md  OUTPUT_STRUCTURE.md  PDF_GENERATION_FIX_PLAN.md  PDF_ONLY_IMPLEMENTATION_PLAN.md  SECURITY_HARDENING.md  TASK_6_LANGUAGES_GUIDE.md  TEMPLATES.md  TROUBLESHOOTING_EMPTY_DATA.md  USAGE.md  WORKFLOW.md
scripts/: common.sh  export-helper.sh  install.sh  profile_performance.py  test.sh
src/: cli.py  config.py  exceptions.py
src/batch/: __init__.py  processor.py
src/exporters/: __init__.py  html_exporter.py
src/pdf/: generator.py  template_manager.py
src/pdf/templates/: cv_template.html  style.css
src/pdf/templates/classic/: logo_colors.css
src/pdf/templates/creative/: cv_template.html  style.css
src/pdf/templates/executive/: cv_template.html  style.css
src/pdf/templates/modern/: cv_template.html  style.css
src/scraper/: linkedin_scraper.py  parser.py
src/scripts/: common.sh  install.sh
src/security/: __init__.py  rate_limiter.py  validator.py  validator.py.backup
src/utils/: cache.py  encryption.py  extract_cookies.py  image_processor.py  logger.py  qr_generator.py  structured_logger.py
src/utils/debug/: extract_to_json.py  scrape_and_save.py
test_data/: mock_linkedin_profile.debug.json  mock_linkedin_profile.html  mock_linkedin_profile.selectors.json
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_e2e.py  test_encryption.py  test_experience_extraction.py  test_image_processor.py  test_parser.py  test_pdf_generator.py  test_performance.py  test_qr_integration.py  test_rate_limiter.py  test_security_validator.py  test_template_manager.py
tests/batch/: test_processor.py
tests/exporters/: test_html_exporter.py
tests/utils/: test_image_processor.py  test_structured_logger.py
